--- a/src/main/resources/fxml/AdminSettings.fxml
+++ b/src/main/resources/fxml/AdminSettings.fxml
@@ -17,7 +17,7 @@
     <top>
         <VBox spacing="20" styleClass="header-top-gradient">
             <HBox alignment="CENTER_LEFT" spacing="20">
-                <Button fx:id="backButton" styleClass="header-accent-button" text=" 190 Back" />
+                <Button fx:id="backButton" styleClass="header-accent-button" text="Back" />
                 <Text text="Admin Settings" styleClass="header-title">
                     <font><Font name="System Bold" size="28" /></font>
                 </Text>
