--- a/src/main/resources/fxml/BookingOverview.fxml
+++ b/src/main/resources/fxml/BookingOverview.fxml
@@ -32,7 +32,7 @@
                </font>
             </Text>
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="newBookingButton" style="-fx-background: linear-gradient(to right, #2ECC71, #58D68D); -fx-text-fill: white; -fx-padding: 15 25; -fx-background-radius: 25; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 3, 0, 0, 1);" text="+ New Booking">
+            <Button fx:id="newBookingButton" style="-fx-background: linear-gradient(to right, #2ECC71, #58D68D); -fx-text-fill: #2C3E50; -fx-padding: 15 25; -fx-background-radius: 25; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 3, 0, 0, 1);" text="+ New Booking">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
